--- a/cards.html
+++ b/cards.html
@@ -48,21 +48,41 @@
       </form>
     </div>
 
+    <div class="search__ordenation">
+      <select class="search__ordenation--content search__orderBy">
+        <option value="">
+          Ordenar por
+        </option>
+        <option value="greater">
+          Maior preço
+        </option>
+        <option value="lower">
+          Menor preço
+        </option>
+      </select>
+    </div>
   </div>
 
-  <div class="search__ordenation">
-    <select class="search__ordenation--content search__orderBy">
-      <option value="">
-        Ordenar por
-      </option>
-      <option value="greater">
-        Maior preço
-      </option>
-      <option value="lower">
-        Menor preço
-      </option>
-    </select>
+  <div class="main">
+    <div class="main__notfound">
+      <div class="main__notfound-image">
+        <img src="/assets/images/Leaf.svg" alt="">
+      </div>
+
+      <h3 class="main__notfound-header">
+        Ops! <br> Nenhum produto cadastrado
+      </h3>
+
+      <h4 class="main__notfound-text">
+        Cadastre o seu primeiro produto e comece a vender agora mesmo
+      </h4>
+
+      <a href="registro.html" class="main__notfound-button">
+        Cadastrar Produtos
+      </a>
+    </div>
   </div>
+
   <main class="main__card">
 
     <div class="main__cards">
