--- a/registro.html
+++ b/registro.html
@@ -27,7 +27,7 @@
   </header>
   <div class="container">
     <div class="back">
-      <a href="cards.html" class="main__back">
+      <a href="index.html" class="main__back">
         <img src="/assets/images/Back.svg" alt="">
       </a>
 
